made some changes in my service page

--- a/service.html
+++ b/service.html
@@ -7,6 +7,9 @@
     
 </head>
 <body>
-    <h1> pull request to be mergd</h1>
+    <h1> pull request to be merged</h1>
+    <ol> our services </ol>
+    <li>web design</li>
+    <li>database maintenance</li>
 </body>
 </html>
