added some changes in service page on main branch

--- a/service.html
+++ b/service.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1> pull request to be mergd</h1>
+    <ul>
+        <li>games</li>
+        <li>FIFA25</li>
+        <LI>
+            CALL OF DUTY
+        </LI>
+    </ul>
 </body>
 </html>
