added so me changes in team page ona different branch

--- a/team.html
+++ b/team.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document of team</title>
+    <title>Document of team in a different branch
+
+    </title>
 </head>
 <body>
+    <p>real madrid</p>
+    <p>fc barcelona</p>
+    <p>manchester united</p>
     
 </body>
 </html>
